[project]
name = "calculator"
version = "0.1.0"
description = "Universal calculator"
dependencies = [
    "flet>=0.25.2"
]

[tool.flet]
org = "com.offpolice"
project = "CalcApp"
product = "calculator"

[tool.flet.android]
min_sdk_version = 24
target_sdk_version = 34

[tool.flet.android.permission]
"android.permission.INTERNET" = true

# (Android 13+)
"android.permission.READ_MEDIA_VIDEO" = true
"android.permission.READ_MEDIA_AUDIO" = true

# (Android 11)
"android.permission.READ_EXTERNAL_STORAGE" = true
"android.permission.WRITE_EXTERNAL_STORAGE" = true
